--- a/.github/workflows/top-github-users.yml
+++ b/.github/workflows/top-github-users.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
         with:
           ref: ${{ github.head_ref }}
-          token: ${{ secrets.CUSTOM_TOKEN }}
+          token: ${{ secrets.MY_TOKEN || github.token }}
       - uses: actions/setup-node@v2.1.5
         with:
           node-version: 14.17.0
