--- a/.github/workflows/top-github-users.yml
+++ b/.github/workflows/top-github-users.yml
@@ -1,7 +1,7 @@
 name: Top GitHub Users
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '* */24 * * *'
   workflow_dispatch:
 jobs:
   release:
