--- a/.github/workflows/top-github-users.yml
+++ b/.github/workflows/top-github-users.yml
@@ -17,4 +17,4 @@ jobs:
           node-version: 14.17.0
       - uses: gayanvoice/top-github-users-action@master
         env:
-          CUSTOM_TOKEN: ${{ secrets.CUSTOM_TOKEN }}
+          CUSTOM_TOKEN: ${{ secrets.CUSTOM_TOKEN || github.token }}
