--- a/.github/workflows/top-github-users.yml
+++ b/.github/workflows/top-github-users.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v2.3.4
         with:
           ref: ${{ github.head_ref }}
-          token: ${{ secrets.GITHUB_CUSTOM_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-node@v2.1.5
         with:
           node-version: 14.17.0
       - uses: gayanvoice/top-github-users-action@master
         env:
-          GITHUB_CUSTOM_TOKEN: ${{ secrets.GITHUB_CUSTOM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
